# SmartThings_dynamic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.claude/hooks/: session-start.sh
custom_components/smartthings_dynamic/: __init__.py  api.py  application_credentials.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  vacuum.py  webhook.py
custom_components/smartthings_dynamic/translations/: en.json  pl.json
tests/: conftest.py  test_api.py  test_camera.py  test_commands.py  test_device_discovery.py  test_helpers.py  test_sensor_energy.py  test_webhook.py
