[project]
name = "smartthings-dynamic"
version = "2.1.1"
description = "Home Assistant custom integration for dynamic SmartThings device control"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiohttp",
    "ruff>=0.4",
    "voluptuous",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["custom_components/smartthings_dynamic"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
